# shifting_variables

./: CMakeLists.txt
include/: shifting_config.h  shifting_variables.h
include/implementation/: shifting_variables.hpp
include/overloads/assignment/: operator_addition_assignment.h  operator_assignment.h  operator_bitwise_AND_assignment.h  operator_bitwise_OR_assignment.h  operator_bitwise_XOR_assignment.h  operator_division_assignment.h  operator_left_shift_assignment.h  operator_modulo_assignment.h  operator_multiplication_assignment.h  operator_right_shift_assignment.h  operator_subtraction_assignment.h
test/: main.cpp
